-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u451, openjdk8u452, 11.0.27-oracle, 17.0.15-oracle, 21.0.7-oracle, 24.0.1, 25
-
Component/s: client-libs
-
b26
-
generic
-
generic
Graphics.copyArea fails to copy any pixels when there is overflow.
The spec says ""If a portion of the source rectangle lies outside the bounds of the component, or is obscured by another window or component, {@code copyArea} *will be unable to copy* the associated pixels"
which suggests that we should always copy the parts inside the bounds and never the parts outside the bounds
but it seems currently, in the case of overflow it no longer copies any pixels, including the parts that are inside.
The spec says ""If a portion of the source rectangle lies outside the bounds of the component, or is obscured by another window or component, {@code copyArea} *will be unable to copy* the associated pixels"
which suggests that we should always copy the parts inside the bounds and never the parts outside the bounds
but it seems currently, in the case of overflow it no longer copies any pixels, including the parts that are inside.
- relates to
-
JDK-8358103 Update implementation of Blit_Blit to properly intersect src, dst and clip
-
- In Progress
-
-
JDK-8358107 Rollback JDK-8357299 changeset
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/64503c78
-
Review(master)
openjdk/jdk/25340