8357299: Graphics copyArea doesn't copy any pixels when there is overflow