src/java.desktop/share/native/libawt/java2d/loops/Blit.c
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2000, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2000, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -74,19 +74,16 @@ Java_sun_java2d_loops_Blit_Blit
 
     srcInfo.bounds.x1 = srcx;
     srcInfo.bounds.y1 = srcy;
-    if (UNSAFE_TO_ADD(srcx, width) ||
-        UNSAFE_TO_ADD(srcy, height) ||
-        UNSAFE_TO_ADD(dstx, width) ||
-        UNSAFE_TO_ADD(dsty, height)) {
-        return;
-    }
-
-    srcInfo.bounds.x2 = srcx + width;
-    srcInfo.bounds.y2 = srcy + height;
+    srcInfo.bounds.x2 = UNSAFE_TO_ADD(srcx, width)
+                        ? clipInfo.bounds.x2 : (srcx + width);
+    srcInfo.bounds.y2 = UNSAFE_TO_ADD(srcy, height)
+                        ? clipInfo.bounds.y2 : (srcy + height);
     dstInfo.bounds.x1 = dstx;
     dstInfo.bounds.y1 = dsty;
-    dstInfo.bounds.x2 = dstx + width;
-    dstInfo.bounds.y2 = dsty + height;
+    dstInfo.bounds.x2 = UNSAFE_TO_ADD(dstx, width)
+                        ? clipInfo.bounds.x2 : (dstx + width);
+    dstInfo.bounds.y2 = UNSAFE_TO_ADD(dsty, height)
+                        ? clipInfo.bounds.y2 : (dsty + height);
     if (UNSAFE_TO_SUB(srcx, dstx) ||
         UNSAFE_TO_SUB(srcy, dsty)) {
         return;
